_old/webshop/k8s/admin.yaml
# k8s/admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: buenzli-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: admin
          image: ghcr.io/j4n06/buenzli-admin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: buenzli-shop
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
